# poe2-skill-gem-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: router.py  schemas.py
app/rag/: embeddings.py  genai_client.py  vector_store.py
data/: skills.json
scripts/: ingest.py
tests/api/: conftest.py  test_ask_endpoint.py  test_search_endpoint.py
tests/integration/: conftest.py  test_generate_answer.py  test_ingest.py  test_vector_store.py
tests/integration/fixtures/: sample_gems.json
tests/unit/: test_build_prompt.py  test_embeddings.py  test_schemas.py
