[project]
name = "poe2-skill-gem-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client==1.18.0",
    "sentence-transformers==5.6.0",
    "uvicorn>=0.50.0",
]
