[project]
name = "poe2-skill-gem-rag"
version = "0.1.0"
description = "A small Retrieval-Augmented Generation (RAG) app for searching Path of Exile 2 skill gems using natural language"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.15.0",
    "fastapi>=0.139.0",
    "google-genai>=2.12.1",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "qdrant-client==1.18.0",
    "sentence-transformers==5.6.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
